@@ -1,5 +1,11 @@
 2017-07-28  Trevor Saunders  <tbsaunde+gcc@tbsaunde.org>
 
+	* gimple.c (gimple_build_with_ops_stat): Adjust.
+	(gimple_alloc_stat): Remove _stat from name.
+	* gimple.h (gimple_alloc): Remove macro.
+
+2017-07-28  Trevor Saunders  <tbsaunde+gcc@tbsaunde.org>
+
 	* tree.c (make_tree_vec_stat): Remove _stat from name.
 	(grow_tree_vec_stat): Likewise.
 	* tree.h (make_tree_vec_stat): Adjust prototype.
